ファーストセカンド。

--- a/work/first/answer/index.html
+++ b/work/first/answer/index.html
@@ -23,9 +23,7 @@
       <h2 class="sub-title">Q3</h2>
       <div class="question">
         <div class="btn" id="q3">Q3</div>
-      </div>
-      <h2 class="sub-title">Q4</h2>
-      <div class="question">
+      </div> class="question">
         <div class="btn" id="q4">Q4</div>
       </div>
       <h2 class="sub-title">Q5</h2>
