--- a/work/second/index.html
+++ b/work/second/index.html
@@ -22,6 +22,16 @@
     <script src="../../common/js/jquery.js"></script>
     <script>
       // 今回やるのはモーダルです。
+      $(function(){
+        $(".modal-show").click(fadeIn);
+        function fadeIn() {
+          $(".modal").fadeIn(3000);
+         $(".modal-close").click(fadeOut);
+          function fadeOut(){
+            $(".modal").fadeOut(3000);
+          }
+        }
+      });
       // .modal-show をクリックすることで .modal をfadeInさせる。
       // .modal-close をクリックで .modal をfadeOutさせる。
       // .click() クリック時のイベントを登録する。
